# inline-crate

./: Cargo.toml  README.md
src/: main.rs
